支持数据分片为多个文件

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,9 @@ a001_eg_from_uni
 a003_data/a001_raw/*
 a003_data/a002_filtered/*
 a003_data/a003_test/*
+a003_data/a004_pieces/*
 
 !a003_data/a001_raw/.gitkeep
 !a003_data/a002_filtered/.gitkeep
 !a003_data/a003_test/.gitkeep
+!a003_data/a004_pieces/.gitkeep
