--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "mpi4py>=4.0.3",
-    "natsort>=8.4.0",
-    "numpy>=2.2.4",
-    "tqdm>=4.67.1",
+#    "natsort>=8.4.0",
+#    "numpy>=2.2.4",
+#    "tqdm>=4.67.1",
 ]
